--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
                     <span id="run-code" class="material-symbols-outlined"
                         >directions_run</span
                     >
+                    <span id="erease-code" class="material-symbols-outlined">
+                        ink_eraser
+                    </span>
                 </div>
                 <div id="debugger">
-                    <div id="debugger-bar"><p>debugger</p></div>
+                    <div id="debugger-bar"><p>Debugger</p></div>
                     <div id="debugger-content"></div>
-                    <div id="debugger-infobar">
-                        <p id="debugger-compile-time"></p>
-                    </div>
+                </div>
+                <div id="debugger-infobar">
+                    <p id="debugger-compile-time"></p>
                 </div>
             </div>
         </div>
