--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html>
     <head>
         <meta charset="utf-8" />
@@ -15,6 +14,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
         />
+        <script src="main.dart.js"></script>
     </head>
 
     <body>
@@ -23,10 +23,13 @@
                 src="https://raw.githubusercontent.com/pptos-org/artwork/main/logo/PPTOS_LOGO_2024_TEXT.svg"
                 alt="logo"
             />
+            <div id="share">
+                Share<span class="material-symbols-outlined"> send </span>
+            </div>
         </header>
         <div id="content">
             <textarea id="code"></textarea>
-            <div id="debugger-wrapper">
+            <div id="console-wrapper">
                 <div id="toolbar">
                     <span id="run-code" class="material-symbols-outlined"
                         >directions_run</span
@@ -35,15 +38,14 @@
                         ink_eraser
                     </span>
                 </div>
-                <div id="debugger">
-                    <div id="debugger-bar"><p>Debugger</p></div>
-                    <div id="debugger-content"></div>
+                <div id="console">
+                    <div id="console-bar"><p>Console</p></div>
+                    <div id="console-content"></div>
                 </div>
-                <div id="debugger-infobar">
-                    <p id="debugger-compile-time"></p>
+                <div id="console-infobar">
+                    <p id="console-compile-time"></p>
                 </div>
             </div>
         </div>
     </body>
-    <script src="main.dart.js"></script>
 </html>
