--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
         </header>
         <div id="content">
             <textarea id="code"></textarea>
-            <div id="debugger-wrapper">
+            <div id="console-wrapper">
                 <div id="toolbar">
                     <span id="run-code" class="material-symbols-outlined"
                         >directions_run</span
@@ -35,12 +35,12 @@
                         ink_eraser
                     </span>
                 </div>
-                <div id="debugger">
-                    <div id="debugger-bar"><p>Debugger</p></div>
-                    <div id="debugger-content"></div>
+                <div id="console">
+                    <div id="console-bar"><p>Console</p></div>
+                    <div id="console-content"></div>
                 </div>
-                <div id="debugger-infobar">
-                    <p id="debugger-compile-time"></p>
+                <div id="console-infobar">
+                    <p id="console-compile-time"></p>
                 </div>
             </div>
         </div>
