--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 src="https://raw.githubusercontent.com/pptos-org/artwork/main/logo/PPTOS_LOGO_2024_TEXT.svg"
                 alt="logo"
             />
+            <div id="share">
+                Share<span class="material-symbols-outlined"> send </span>
+            </div>
         </header>
         <div id="content">
             <textarea id="code"></textarea>
