Add local filesystem support

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
             </div>
         </header>
         <div id="content">
+            <div id="filesystem"></div>
             <textarea id="code"></textarea>
             <div id="console-wrapper">
                 <div id="toolbar">
